--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,14 @@
             <version>5.1.8</version>
         </dependency>
 
+<!--        数据校验  jsr303 数据校验支持-->
+        <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.13.Final</version>
+        </dependency>
+
 
     </dependencies>
 
