--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,24 @@ MyBatis-Plus 从 3.0.3 之后移除了代码生成器与模板引擎的默认依
             <version>2.0</version>
         </dependency>
 
+<!--        配置 日志文件-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.7</version>
+        </dependency>
 
     </dependencies>
 
